correcao de erros encode e add funcao decode,atualizacao readme

--- a/src/index.html
+++ b/src/index.html
@@ -34,15 +34,15 @@
     <div id="instructionStyle">
 
       <h2>INSTRUÇÕES</h2>
-      <P> Para utilizar a cifra de césar siga os tópicos abaixo:
+      <p> Para utilizar a cifra de césar siga os tópicos abaixo:
 
-        <OL>
+        <ol>
           <li>Insira sua mensagem no campo de texto abaixo (Não utilize caracteres especiais).</li>
           <li>Escolha o offset no ícone da chave.</li>
           <li>Clique no botão de acordo com a opção desejada codificar/decodificar.</li>
           <li>Sua mensagem aparecerá no campo de texto a direita, podendo ser copiada.</li>
-         </OL>
-      </P>
+        </ol>
+      </p>
       <h5><mark>IMPORTANTE:</mark>Não esqueça que a mesma chave escolhida
         será necessaria para codificar e decodificar sua mensagem.</h5>
 
@@ -55,7 +55,7 @@
         <textarea name="textarea" id="messageTextArea" class="boxStyle" cols="50" rows="10" placeholder="Insira a mensagem aqui"></textarea>
 
         <form>
-          <i class='icon'></i>
+          <i class="icon"></i>
           <input type="number" id="quantity" class="boxStyle" name="quantity" min="1" value="1">
           <button type="button" id="buttonEncode">ENCODE</button>
           <button type="button" id="buttonDecode">DECODE</button>
