atualizacao de intrucoes no html, css, readme e js

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div id="texby"> </div>
+  
 
   <main id="main">
     <h1>Cifra de César-Criptografia Monoalfabética</h1>
@@ -37,7 +37,7 @@
       <p> Para utilizar a cifra de césar siga os tópicos abaixo:
 
         <ol>
-          <li>Insira sua mensagem no campo de texto abaixo (Não utilize caracteres especiais).</li>
+          <li>Insira sua mensagem no campo de texto abaixo.</li>
           <li>Escolha o offset no ícone da chave.</li>
           <li>Clique no botão de acordo com a opção desejada codificar/decodificar.</li>
           <li>Sua mensagem aparecerá no campo de texto a direita, podendo ser copiada.</li>
@@ -74,7 +74,6 @@
           placeholder=" Seu resultado vai aparecer aqui"></textarea>
 
 
-
         <form>
           <button type="button" id="buttonCopy">COPIAR</button>
           <button type="button" id="buttonRefresh">REINICIAR</button>
@@ -87,7 +86,7 @@
     </div>
     <script src="index.js" type="module"></script>
   </main>
-
+  <div id="texby"> </div>
 </body>
 
 </html>
