add if else p/ offset negativo index.js, alt val min input type numb

--- a/src/index.html
+++ b/src/index.html
@@ -57,13 +57,13 @@
 
         <form>
           <i class="icon"></i>
-          <input type="number" id="quantity" class="boxStyle" name="quantity" min="1" value="1">
+          <input type="number" id="quantity" class="boxStyle" name="quantity" value="1">
           <button type="button" id="buttonEncode">ENCODE</button>
           <button type="button" id="buttonDecode">DECODE</button>
         </form>
       </div>
 
-      <!-- <div id="imagemMoeda"> <img id="coin" src="images/logocifra.jpg"> </div> -->
+      <!-- <div id="imagemMoeda"> <img id="coin" src="images/logocifra.jpg">  </div> -->
 
 
       <div id="boxOutput">
