alteracao de instrucoes add palavra encode/decode

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         <ol>
           <li>Insira sua mensagem no campo de texto abaixo.</li>
           <li>Escolha o offset no ícone da chave.</li>
-          <li>Clique no botão de acordo com a opção desejada codificar/decodificar.</li>
+          <li>Clique no botão de acordo com a opção desejada codificar(encode)/decodificar(decode).</li>
           <li>Sua mensagem aparecerá no campo de texto a direita, podendo ser copiada.</li>
         </ol>
       </p>
