correcao ortografica instrucoes html.

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
         </ol>
       </p>
       <h5><mark>IMPORTANTE:</mark>Não esqueça que a mesma chave escolhida
-        será necessaria para codificar e decodificar sua mensagem.</h5>
+        será necessária para codificar e decodificar sua mensagem.</h5>
 
     </div>
 
