aumento de fonte text-area input e output.

--- a/src/index.html
+++ b/src/index.html
@@ -53,8 +53,8 @@
       <section class="box-input">
 
         <label for="messagetextarea"><strong>Mensagem:</strong></label>
-        <textarea name="textarea" id="messagetextarea" class="box-style" cols="50" rows="10"
-          placeholder="Insira a mensagem aqui"></textarea>
+        <textarea name="textarea" id="messagetextarea" class="box-style" cols="40" rows="10"
+          placeholder="Insira a mensagem aqui" style="font-size:20px"></textarea>
 
         <div>
           <i class="icon"></i>
@@ -67,8 +67,8 @@
       <section id="boxout" class="box-output">
 
         <label for="resulttextarea"><strong>Resultado:</strong></label>
-        <textarea name="resulttextarea" id="resulttextarea" class="box-style" cols="50" rows="10"
-          placeholder=" Seu resultado vai aparecer aqui"></textarea>
+        <textarea name="resulttextarea" id="resulttextarea" class="box-style" cols="40" rows="10"
+          placeholder=" Seu resultado vai aparecer aqui" style="font-size:20px"></textarea>
 
         <div>
           <button type="button" id="buttoncopy" class="button-style">COPIAR</button>
